# COMP2432-Project

./: .gitignore  Cargo.toml  README.md  benchmark.quick.toml  benchmark.toml  config.toml
common_models/: Cargo.toml
common_models/src/: lib.rs
dashboard/: Cargo.toml  build.rs
dashboard/src/: lib.rs  models.rs  resource.rs
dashboard/templates/: index.html  latest.html  stats.html
data/: 2026-03-23.json
gateway/: Cargo.toml
gateway/src/: aggregation.rs  main.rs  rates.rs  sensor_buffer.rs  storage.rs
gateway/src/benchmark/: collector.rs  mod.rs  report.rs  scenarios.rs
os_lib/src/: lib.rs  queue.rs  queue_noncopy.rs
scripts/: run_benchmark.sh
sensor_sim/src/: accelerometer.rs  force_sensor.rs  lib.rs  sim.rs  thermometer.rs  traits.rs
templates/: index.html  latest.html  sensor.html  shutdown.html  stats.html
