[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
hotaru = "0.7.7" 
hotaru_core = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
salvo = { version = "0.85.0", features = ["server-handle"] }
tokio = "1.50.0"
common_models = { path = "../common_models" }
