[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
sensor_sim = { path = "../sensor_sim" }
dashboard = { path = "../dashboard" }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ctrlc = "3.2"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
common_models = { path = "../common_models" }